@@ -15,7 +15,9 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
+
 import java.io.IOException;
+import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 
@@ -23,14 +25,14 @@ import java.util.List;
 @RequiredArgsConstructor
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
-
     private final InvalidatedTokenRepository invalidatedTokenRepository;
 
     @Value("${jwt.signerKey}")
     private String signerKey;
 
     @Override
-    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain) throws ServletException, IOException {
+    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
+            throws ServletException, IOException {
         String header = request.getHeader("Authorization");
         if (header == null || !header.startsWith("Bearer ")) {
             filterChain.doFilter(request, response);
@@ -39,7 +41,7 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
         String token = header.substring(7);
 
-        try{
+        try {
             SignedJWT signedJWT = SignedJWT.parse(token);
 
             JWSVerifier verifier = new MACVerifier(signerKey.getBytes());
@@ -47,7 +49,7 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
             String jti = signedJWT.getJWTClaimsSet().getJWTID();
 
             if (invalidatedTokenRepository.existsById(jti)) {
-                writeError(response, "Token đã bị logout");
+                writeError(response, "Token has been logged out");
                 return;
             }
 
@@ -58,29 +60,26 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
             Date exp = signedJWT.getJWTClaimsSet().getExpirationTime();
 
             if (exp.before(new Date())) {
-                writeError(response, "Token đã hết hạn");
+                writeError(response, "Token has expired");
                 return;
             }
 
             String username = signedJWT.getJWTClaimsSet().getSubject();
-            String role  = signedJWT.getJWTClaimsSet().getStringClaim("role");
+            String role = signedJWT.getJWTClaimsSet().getStringClaim("role");
 
-            List<GrantedAuthority> authorities = List.of(() -> role);
+            List<GrantedAuthority> authorities = role == null ? Collections.emptyList() : List.of(() -> role);
 
             UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(
                     username, null, authorities
             );
 
             SecurityContextHolder.getContext().setAuthentication(auth);
-
-
-        }catch (Exception e) {
-            writeError(response, "Token không hợp lệ");
+        } catch (Exception e) {
+            writeError(response, "Token is invalid");
             return;
         }
 
         filterChain.doFilter(request, response);
-
     }
 
     private void writeError(HttpServletResponse response, String message) throws IOException {
@@ -91,7 +90,6 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
         String json = """
         {
             "status": 401,
-            "error": "Unauthorized",
             "message": "%s"
         }
         """.formatted(message);
